--- a/02index.html
+++ b/02index.html
@@ -2,4 +2,18 @@
 
     // peça para o usuário inserir um número. calcule o fatorial desse número e retorne o resultado 
     // Exemplo : se for 5 o resultado sera 120 //
+
+
+
+    const numero = Number(prompt(`digite um numero`));
+
+    let fatorial =1;
+
+    for (let contador = 1; contador <= numero; contador++){
+
+        fatorial = fatorial * contador;
+1       
+    }
+
+    document.write(`${fatorial}`)
 </script>
